hphp/test/zend/good/Zend/tests/ns_084.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_084.php on line 16
